added click effects

--- a/templates/vinyl.html
+++ b/templates/vinyl.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <!-- <div id="canvas"></div> -->
+    <p>ㅁㄴㅇㄹ</p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script type="module" defer src="./static/src/js/dist/wheel.js"></script>
-    <!-- <script type="module" defer src="./static/src/js/dist/main.js"></script> -->
+    <!-- <script type="module" defer src="./static/src/js/dist/wheel.js"></script> -->
+    <!-- <script type="module" defer src="./static/src/js/dist/vinyl.js"></script> -->
 </body>
 </html>
