--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,11 @@
 <body>
     <div id="content">
         <div class="thetitle" id="title"></div>
-        <label for="thefile" class="file"> Colors
+        <!-- <label for="thefile" class="file"> Colors
             <input type="file" id="thefile" accept="audio/*" />
-        </label>
+        </label> -->
 
-        <audio id="audio" controls></audio>
+        <!-- <audio id="audio" controls></audio> -->
         <div id="canvas"></div>
     </div>
 
