added meyda analyser

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,5 +23,6 @@
     <br>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script type="module" defer src="./static/src/js/dist/circle.js"></script>
+    <script src="https://unpkg.com/meyda@<VERSION>/dist/web/meyda.min.js"></script>
 </body>
 </html>
