added setTimeout Function

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,9 @@
     </div>
 
     <br>
-
+    <script>
+        setTimeout('location.reload()', 600000);
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/noisejs@2.1.0/index.min.js"></script>
 
