--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,6 @@
     <script src="https://cdn.jsdelivr.net/npm/noisejs@2.1.0/index.min.js"></script>
 
     <script type="module" defer src="./static/src/js/dist/colors.js"></script>
-    <!-- <script type="module" defer src="./static/src/js/dist/timebytime.js"></script> -->
+    <script type="module" defer src="./static/src/js/dist/timebytime.js"></script>
 </body>
 </html>
